# game-promo-hub

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER_PLAN.md  Dockerfile.api  README.md  SETUP.md  TUTORIAL.md  bot.py  compose.yaml  config.py  game-promo-bot-spec.md  implementation-plan.md  main.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
api/: app.py  db.py
api/routes/: analytics.py  appeals.py  assets.py  drafts.py  games.py  progress.py  schedule.py
cogs/: analytics_cog.py  appeal_cog.py  asset_cog.py  game_cog.py  progress_cog.py  promo_cog.py  schedule_cog.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
prompts/: brand_voice.txt  system_analytics.txt  system_promo.txt
services/: __init__.py  db.py  discord_utils.py  llm.py  scheduler.py  twitter.py
tests/: test_api.py  test_config.py  test_config_validate.py  test_db_and_scheduler.py  test_db_extra.py  test_db_helpers.py  test_db_unit.py  test_discord_utils.py  test_discord_utils_extra.py  test_llm.py  test_llm_extra.py  test_scheduler_unit.py  test_twitter_utils.py
