[project]
name = "game-promo-hub"
version = "0.1.0"
description = "Discord bot for managing indie game promotion drafts, scheduling approved posts, and analyzing X/Twitter performance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    "apscheduler>=3.10.0",
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "tzdata>=2024.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

